Closed Bug 158202 Opened 23 years ago Closed 23 years ago

crash opening venkman and closing navigator - Trunk [@ nsXULElement::GetOwnerDocument]

Categories

(Core :: XUL, defect)

x86
Windows 2000
defect
Not set
blocker

Tracking

()

VERIFIED FIXED

People

(Reporter: timeless, Assigned: sicking)

References

Details

(4 keywords)

Crash Data

Attachments

(1 file)

Incident ID 8454510 Stack Signature nsXULElement::GetOwnerDocument 4c8cb4bc Product ID MozillaTrunk Build ID 2002071813 Trigger Time 2002-07-18 15:32:39 Platform Win32 Operating System Windows NT 5.0 build 2195 Module gkcontent.dll URL visited opening venkman and closing navigator Trigger Reason Access violation Source File Name c:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp Trigger Line No. 931 Stack Trace nsXULElement::GetOwnerDocument [c:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp, line 931] nsContentUtils::CheckSameOrigin [c:/builds/seamonkey/mozilla/content/base/src/nsContentUtils.cpp, line 426] nsXULElement::InsertBefore [c:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp, line 992] XPTC_InvokeByIndex [c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp, line 106] XPCWrappedNative::CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp, line 1996] XPC_WN_CallMethod [c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 1267] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 790] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 2744] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 806] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 2744] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 806] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 2744] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 806] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 2744] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 806] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 2744] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 806] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 2744] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 806] js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 2744] js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 806] js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 881] JS_CallFunctionValue [c:/builds/seamonkey/mozilla/js/src/jsapi.c, line 3430] nsJSContext::CallEventHandler [c:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp, line 1045] nsJSEventListener::HandleEvent [c:/builds/seamonkey/mozilla/dom/src/events/nsJSEventListener.cpp, line 184] nsEventListenerManager::HandleEventSubType [c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp, line 1222] nsEventListenerManager::HandleEvent [c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp, line 1904] GlobalWindowImpl::HandleDOMEvent [c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp, line 763] DocumentViewerImpl::LoadComplete [c:/builds/seamonkey/mozilla/content/base/src/nsDocumentViewer.cpp, line 1561] nsDocShell::EndPageLoad [c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp, line 4123] nsWebShell::EndPageLoad [c:/builds/seamonkey/mozilla/docshell/base/nsWebShell.cpp, line 723] nsDocShell::OnStateChange [c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp, line 4037] nsDocLoaderImpl::FireOnStateChange [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp, line 1218] nsDocLoaderImpl::doStopDocumentLoad [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp, line 870] nsDocLoaderImpl::DocLoaderIsEmpty [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp, line 768] nsDocLoaderImpl::OnStopRequest [c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp, line 699] nsLoadGroup::RemoveRequest [c:/builds/seamonkey/mozilla/netwerk/base/src/nsLoadGroup.cpp, line 703] nsCachedChromeChannel::HandleStopLoadEvent [c:/builds/seamonkey/mozilla/rdf/chrome/src/nsChromeProtocolHandler.cpp, line 481] PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c, line 597] PL_ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c, line 530] _md_EventReceiverProc [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c, line 1078] nsAppShellService::Run [c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp, line 452] main1 [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1527] main [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1874] WinMain [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1892] WinMainCRTStartup() KERNEL32.DLL + 0x7903 (0x77e87903) reproducable, yes: TB8454556Q steps: tools>web..>...debugger click [x] on navigator
sicking appears to own those lines :)
Assignee: hyatt → sicking
Keywords: crash
Comment on attachment 91894 [details] [diff] [review] patch to fix sr=jst
Attachment #91894 - Flags: superreview+
Comment on attachment 91894 [details] [diff] [review] patch to fix r=bzbarsky
Attachment #91894 - Flags: review+
*** Bug 158204 has been marked as a duplicate of this bug. ***
Comment on attachment 91894 [details] [diff] [review] patch to fix a=scc for checkin to the mozilla trunk
Attachment #91894 - Flags: approval+
note that this bug results in dom inspector crashing if you try to inspect a window, i also crashed trying to use the xbl test suite and doing a few other things. I'd like this fix to be checked in and generate a respin before the tree opens.
Severity: critical → blocker
Status: NEW → ASSIGNED
Keywords: smoketest
checked in w/ approval for closed tree checkin from scc,jj and jesup
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 158340 has been marked as a duplicate of this bug. ***
just fixed the stack sig (white space) so talkback can register bug number.
Summary: crash opening venkman and closing navigator [@nsXULElement::GetOwnerDocument] → crash opening venkman and closing navigator [@ nsXULElement::GetOwnerDocument]
Adding topcrash info for future reference.
Keywords: testcase, topcrash+
Summary: crash opening venkman and closing navigator [@ nsXULElement::GetOwnerDocument] → crash opening venkman and closing navigator - Trunk [@ nsXULElement::GetOwnerDocument]
no longer seeing the crash reported in 158167, same stack right? as seen on respins: windows 2002-07-19-11-trunk linux 2002-07-19-11-trunk max osx 2002-07-19-11-trunk marking verified
Status: RESOLVED → VERIFIED
Keywords: zt4newcrash
Depends on: 156452
Blocks: 158167
*** Bug 158360 has been marked as a duplicate of this bug. ***
*** Bug 158432 has been marked as a duplicate of this bug. ***
*** Bug 158685 has been marked as a duplicate of this bug. ***
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: shrir → xptoolkit.widgets
Crash Signature: [@ nsXULElement::GetOwnerDocument]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: