Bug 158202 crash opening venkman and closing navigator [@nsXULElement::GetOwnerDocument] patch by sicking@bigfoot.com r=bz sr=jst a=scc checkin authorized by scc